--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/bin/SakaryaRehberiAPI.dll.config
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/bin/SakaryaRehberiAPI.dll.config
@@ -17,17 +17,17 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Windows" />
+ 
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
-
-    <httpProtocol>
+    <modules runAllManagedModulesForAllRequests="true" />
+    <httpProtocol >
       <customHeaders>
-        <clear />
         <remove name="X-Powered-By" />
         <add name="Access-Control-Allow-Origin" value="*" />
-    <add name="Access-Control-Allow-Headers" value="Origin,Content-Type,Accept,Authorization,X-Ellucian-Media-Type" />
-        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+        <add name="Access-Control-Request-Methods" value="*" />
+        <add name="Access-Control-Request-Headers" value="content-type" />
       </customHeaders>
     </httpProtocol>
     <handlers>
