--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
@@ -78,7 +78,9 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="SehirRehberiEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESCONTES\SQLEXPRESS;initial catalog=SehirRehberi;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DbContext"
+     connectionString="Data Source=DESCONTES\SQLEXPRESS;Initial Catalog=SehirRehberi;Integrated Security=True;"
+     providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
