--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
@@ -16,7 +16,6 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <authentication mode="Windows" />
  
     <httpRuntime targetFramework="4.5" />
   </system.web>
@@ -27,7 +26,7 @@
         <remove name="X-Powered-By" />
         <add name="Access-Control-Allow-Origin" value="*" />
         <add name="Access-Control-Request-Methods" value="*" />
-        <add name="Access-Control-Request-Headers" value="content-type" />
+        <add name="Access-Control-Request-Headers" value="*" />
       </customHeaders>
     </httpProtocol>
     <handlers>
@@ -79,7 +78,7 @@
   </runtime>
   <connectionStrings>
     <add name="DbContext"
-     connectionString="Data Source=DESCONTES\SQLEXPRESS;Initial Catalog=SehirRehberi;Integrated Security=True;"
+     connectionString="Data Source=DESCONTES\SQLEXPRESS;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True"
      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
