--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/SakaryaRehberiAPI.csproj
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/SakaryaRehberiAPI.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Models\UserLike.cs" />
     <Compile Include="Models\UserType.cs" />
     <Compile Include="Models\ViewModels\CommentModel.cs" />
+    <Compile Include="Models\ViewModels\LocationNew.cs" />
     <Compile Include="Models\ViewModels\LoginModel.cs" />
     <Compile Include="Models\ViewModels\RegisterModel.cs" />
     <Compile Include="OAuth\Providers\SimpleAuthorizationServerProvider.cs" />
