--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-﻿SakaryaRehberiAPI/SakaryaRehberiAPI/bin
-SakaryaRehberiAPI/SakaryaRehberiAPI/obj
-#Visual Studio files
+﻿#Visual Studio files
 *.[Oo]bj
 *.user
 *.aps
@@ -20,9 +18,6 @@ SakaryaRehberiAPI/SakaryaRehberiAPI/obj
 *.lib
 *.sbr
 *.sdf
-ipch/
-obj/
-[Bb]in
-[Dd]ebug*/
-[Rr]elease*/
-Ankh.NoLoad
+SakaryaRehberiAPI/SakaryaRehberiAPI/[Bb]in
+SakaryaRehberiAPI/SakaryaRehberiAPI/[Dd]ebug*/
+SakaryaRehberiAPI/SakaryaRehberiAPI/[Rr]elease*/
