--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/bin/SakaryaRehberiAPI.dll.config
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/bin/SakaryaRehberiAPI.dll.config
@@ -24,9 +24,9 @@
     <httpProtocol>
       <customHeaders>
         <remove name="X-Powered-By" />
-        <!--<add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Origin" value="*" />
         <add name="Access-Control-Request-Methods" value="*" />
-        <add name="Access-Control-Request-Headers" value="*" />-->
+        <add name="Access-Control-Request-Headers" value="*" />
       </customHeaders>
     </httpProtocol>
     <handlers>
