--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ SakaryaRehberiAPI/SakaryaRehberiAPI/obj*/
 SakaryaRehberiAPI/packages*/
 SakaryaRehberiAPI/.vs*/
 SakaryaRehberiAPI/.nuget*/
+SakaryaRehberiAPI/SakaryaRehberiAPI/Images*/
 SakaryaRehberiAPI/SakaryaRehberiAPI/[Bb]in
 SakaryaRehberiAPI/SakaryaRehberiAPI/[Dd]ebug*/
 SakaryaRehberiAPI/SakaryaRehberiAPI/[Rr]elease*/
