--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
@@ -14,7 +14,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key= "owin:AutomaticAppStartup" value="false"/>
+    <add key="owin:AutomaticAppStartup" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -25,9 +25,10 @@
     <httpProtocol>
       <customHeaders>
         <remove name="X-Powered-By" />
+        <add name="Access-Control-Expose-Headers " value="WWW-Authenticate" />
         <add name="Access-Control-Allow-Origin" value="*" />
-        <add name="Access-Control-Request-Methods" value="*" />
-        <add name="Access-Control-Request-Headers" value="*" />
+        <add name="Access-Control-Request-Methods" value="GET, POST, OPTIONS, PUT, PATCH, DELETE" />
+        <add name="Access-Control-Request-Headers" value="accept, authorization, Content-Type" />
       </customHeaders>
     </httpProtocol>
     <handlers>
@@ -59,11 +60,7 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
-      </dependentAssembly>
+      </dependentAssembly>    
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
