admin panel and main page fixed

--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
@@ -96,9 +96,9 @@
   </runtime>
   <connectionStrings>
     <!--<add name="DbContext" connectionString="Data Source=SQL5018.Smarterasp.net;Initial Catalog=DB_9FCA93_sakaryarehberi;User Id=DB_9FCA93_sakaryarehberi_admin;Password=aliveli4950;" providerName="System.Data.SqlClient" />-->
-    <add name="DbContext" connectionString="Data Source=.;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DbContext" connectionString="Data Source=.;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
 
-    <!--<add name="DbContext" connectionString="Data Source=DESCONTES\SQLEXPRESS;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <add name="DbContext" connectionString="Data Source=DESCONTES\SQLEXPRESS;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
