--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/SakaryaRehberiAPI.csproj
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/SakaryaRehberiAPI.csproj
@@ -149,9 +149,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\" />
-    <Folder Include="Images\LocationBannerImages\" />
-    <Folder Include="Images\LocationImages\" />
-    <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
@@ -179,11 +176,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Images\LocationBannerImages\2.jpg" />
+    <Content Include="Images\LocationImages\1.jpg" />
+    <Content Include="Images\LocationImages\2.jpg" />
+    <Content Include="Images\LocationImages\3.jpg" />
+    <Content Include="Images\LocationImages\4.jpg" />
+    <Content Include="Images\UserImages\avatar5.jpg" />
+    <Content Include="Images\UserImages\avatar7.jpg" />
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\dsdf.pubxml" />
     <Content Include="Web.config">
@@ -195,8 +197,6 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Content\Site.css" />
-    <Content Include="Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
