--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
@@ -15,8 +15,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="owin:AutomaticAppStartup" value="false" />
+    
   </appSettings>
   <system.web>
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
@@ -95,10 +97,9 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <!--<add name="DbContext" connectionString="Data Source=SQL5018.Smarterasp.net;Initial Catalog=DB_9FCA93_sakaryarehberi;User Id=DB_9FCA93_sakaryarehberi_admin;Password=aliveli4950;" providerName="System.Data.SqlClient" />-->
+    <add name="DbContext" connectionString="Data Source=SQL5018.Smarterasp.net;Initial Catalog=DB_9FCA93_sakaryarehberi;User Id=DB_9FCA93_sakaryarehberi_admin;Password=aliveli4950;" providerName="System.Data.SqlClient" />
     <!--<add name="DbContext" connectionString="Data Source=.;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
-
-    <add name="DbContext" connectionString="Data Source=DESCONTES\SQLEXPRESS;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DbContext" connectionString="Data Source=DESCONTES\SQLEXPRESS;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
