--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/SakaryaRehberiAPI.csproj
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/SakaryaRehberiAPI.csproj
@@ -163,7 +163,9 @@
     <Content Include="Global.asax" />
     <Content Include="Images\UserImages\avatar5.jpg" />
     <Content Include="Images\UserImages\avatar7.jpg" />
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Properties\PublishProfiles\dsdf.pubxml" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
