--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
@@ -24,6 +24,11 @@
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
+     <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="52428800" /> <!--50MB-->
+      </requestFiltering>
+    </security>
     <httpProtocol>
       <customHeaders>
         <remove name="X-Powered-By" />
