--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
@@ -15,7 +15,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="owin:AutomaticAppStartup" value="false" />
-    
+
   </appSettings>
   <system.web>
     <customErrors mode="Off" />
@@ -24,11 +24,18 @@
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
-     <security>
+    <security>
       <requestFiltering>
-        <requestLimits maxAllowedContentLength="52428800" /> <!--50MB-->
+        <requestLimits maxAllowedContentLength="52428800" />
+        <!--50MB-->
       </requestFiltering>
     </security>
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="font/x-woff" />
+    </staticContent>
     <httpProtocol>
       <customHeaders>
         <remove name="X-Powered-By" />
@@ -66,7 +73,7 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
-      </dependentAssembly>    
+      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
@@ -106,10 +113,10 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="DbContext" connectionString="Data Source=SQL5018.Smarterasp.net;Initial Catalog=DB_9FCA93_sakaryarehberi;User Id=DB_9FCA93_sakaryarehberi_admin;Password=aliveli4950;" providerName="System.Data.SqlClient" />
+    <!--<add name="DbContext" connectionString="Data Source=SQL5018.Smarterasp.net;Initial Catalog=DB_9FCA93_sakaryarehberi;User Id=DB_9FCA93_sakaryarehberi_admin;Password=aliveli4950;" providerName="System.Data.SqlClient" />-->
     <!--<add name="DbContext" connectionString="Data Source=.;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
 
-    <!--<add name="DbContext" connectionString="Data Source=DESCONTES\SQLEXPRESS;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <add name="DbContext" connectionString="Data Source=DESCONTES\SQLEXPRESS;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
