--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/SakaryaRehberiAPI.csproj
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/SakaryaRehberiAPI.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Models\UserComment.cs" />
     <Compile Include="Models\UserLike.cs" />
     <Compile Include="Models\UserType.cs" />
+    <Compile Include="Models\ViewModels\ChangePasswordModel.cs" />
     <Compile Include="Models\ViewModels\CommentModel.cs" />
     <Compile Include="Models\ViewModels\LocationNew.cs" />
     <Compile Include="Models\ViewModels\LoginModel.cs" />
