--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -23,7 +23,8 @@
     "ionic-plugin-keyboard",
     "cordova-plugin-geolocation",
     "cordova-plugin-camera",
-    "cordova-plugin-file-transfer"
+    "cordova-plugin-file-transfer",
+    "cordova-plugin-inappbrowser"
   ],
   "cordovaPlatforms": [
     "android"
