--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/Web.config
@@ -115,9 +115,9 @@
   <connectionStrings>
     <!--<add name="DbContext" connectionString="Data Source=SQL5026.Smarterasp.net;Initial Catalog=DB_9FCA93_yeni;User Id=DB_9FCA93_yeni_admin;Password=E484C539;" providerName="System.Data.SqlClient" />-->
 
-    <!--<add name="DbContext" connectionString="Data Source=.;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <add name="DbContext" connectionString="Data Source=.;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 
-    <add name="DbContext" connectionString="Data Source=DESCONTES\SQLEXPRESS;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DbContext" connectionString="Data Source=DESCONTES\SQLEXPRESS;Initial Catalog=SehirRehberi;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
