--- a/SakaryaRehberiAPI/SakaryaRehberiAPI/SakaryaRehberiAPI.csproj
+++ b/SakaryaRehberiAPI/SakaryaRehberiAPI/SakaryaRehberiAPI.csproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\" />
+    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
@@ -164,8 +165,6 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Images\location.jpg" />
-    <Content Include="Images\person.png" />
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
